--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     compile 'com.github.ganfra:material-spinner:2.0.0'
     compile 'com.github.BlackBoxVision:datetimepicker-edittext:v0.3.3'
     compile 'cn.gavinliu.android.lib:ShapedImageView:0.8.4'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
