--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,7 +57,6 @@
         <activity
             android:name=".Activity.TabParentMatchesActivity"
             android:windowSoftInputMode="adjustPan" />
-
         <activity
             android:name=".Activity.TabParentProfileActivity"
             android:windowSoftInputMode="adjustPan" />
@@ -72,7 +71,8 @@
                 android:resource="@xml/provider_paths" />
         </provider>
 
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".LoginActivity"></activity>
     </application>
 
 </manifest>
