--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.github.aakira:expandable-layout:1.4.2@aar'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.9.0'
 }
