--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,6 +72,7 @@
         </provider>
 
         <activity android:name=".MainActivity" />
+        <activity android:name=".Activity.ForgotPasswordActivity" />
         <activity android:name=".Activity.LoginActivity"></activity>
     </application>
 
