--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:27.+'
     compile 'com.github.ganfra:material-spinner:2.0.0'
     compile 'com.github.BlackBoxVision:datetimepicker-edittext:v0.3.3'
+    compile 'com.github.ittianyu:BottomNavigationViewEx:1.2.4'
     compile 'cn.gavinliu.android.lib:ShapedImageView:0.8.4'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
