--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -77,6 +77,7 @@
         <activity android:name=".MainActivity" />
         <activity android:name=".Activity.ForgotPasswordActivity" />
         <activity android:name=".Activity.LoginActivity"></activity>
+        <activity android:name=".Activity.FullImageActivity"/>
     </application>
 
 </manifest>
